--- a/index.html
+++ b/index.html
@@ -9,27 +9,26 @@
   <title>本書の対象読者と前提知識</title>
 </head>
 <body>
-
-<h2><a id="h-1"></a>本書の対象読者と前提知識</h2>
+<h1><a id="h"></a>本書の対象読者と前提知識</h1>
 <p>本章では、本書で伝えたいこと、対象読者、前提知識について説明してきます。</p>
 
-<h2><a id="h-2"></a>はじめに</h2>
-<p>本書は誰も語ることがなかった「アニメ内にでてきたラブライブ！の参加者募集サイトの構成と作り方を具体的に説明する」というコンセプトのもと執筆された本です。</p>
-<p>対象の読者としては「サイト制作に興味があり HTML + CSS は多少知っているが、もっと上手く書けるようになりたい」「これからライブラリを使いつつ JavaScript を書いてみたい」と思っている人達が対象となります。</p>
-<p>そういった人達が、数ページで構成されたサイトを作りきれるくらいになる、というのが本書のゴールです。</p>
+<h2><a id="h-1"></a>はじめに</h2>
+<p>本書は誰も語ることがなかった「アニメ内にでてきたラブライブ！の参加者募集サイトの構成と作り方を、企画と開発の両面から具体的に説明する」というコンセプトのもと執筆された本です。</p>
+<p>本書のゴールとしては「対象の読者で示すような人達が数ページで構成されたサイトを作りきれるくらいになる」というのが目標です。</p>
 
-<h2><a id="h-3"></a>対象の読者</h2>
+<h2><a id="h-2"></a>対象の読者</h2>
 <p>本書は次の方を対象に書かれています。</p>
 <ul>
+<li>自身のサイトをなんとなくで作ってしまって、サイトが整理されていないのでなんとかしたい</li>
 <li>自身の趣味に関してサイトを作ったことはあるが HTML や CSS の書き方について、果たして自分のやり方があっているのか不安</li>
 <li>今まで JavaScript を書いたことはなかったけど、ライブラリを使って動きがついたサイトを作ってみたい</li>
 </ul>
 
-<h2><a id="h-4"></a>前提となる知識</h2>
+<h2><a id="h-3"></a>前提となる知識</h2>
 <p>本書は HTML や CSS や JavaScript の基本的な書きかたは解説しません。こういった内容を書くと扱う内容が多くなりすぎて、とても〆切に間に合わないというのが自明なためです。</p>
 <p>しかし、ある程度は本書で解説するのと、HTML と CSS については今まで書いてきた知識が生かせます。</p>
 
-<h2><a id="h-5"></a>本書の構成</h2>
+<h2><a id="h-4"></a>本書の構成</h2>
 <p>大きく分けて二章に分かれています。</p>
 <p>第一章ではサイトの企画について @fruitnoodle がどのように必要な情報をまとめていくかを書いていきます。</p>
 <p>第二章ではサイトの開発について @kubosho がどのように実装していくのかを書いていきます。</p>
