[ci skip] Update with ccd4902

--- a/ch01.html
+++ b/ch01.html
@@ -13,34 +13,68 @@
 <p>この章では、サイトを作る際の要件定義と要素の整理について解説します。</p>
 
 <h2><a id="h1-1"></a><span class="secno">1.1　</span>要件定義とは</h2>
-<p>制作が始まる前の上流工程として、要件定義というステップがあります。ウェブサイトを制作する際に、このような内容を要件定義したほうがいいと思います。</p>
-<p>− どんなウェブサイトを作るか。− どんな機能が必要か。</p>
-<p>ざっくりした内容ではなく、具体的に書くことをオススメです。</p>
+<p>制作が始まる前の上流工程として、要件定義という段階があります。Web サイトを制作する際に、このような内容を要件定義したほうが良いです。</p>
+<ul>
+<li>どんな Web サイトを作るか</li>
+<li>どんな機能が必要か</li>
+</ul>
+<p>ざっくりした内容ではなく、具体的に書くことをオススメします。</p>
 
 <h2><a id="h1-2"></a><span class="secno">1.2　</span>なぜ要件定義</h2>
-<p>最初からざっくりした考えをまとまらないと、企画資料や制作が途中でぐるぐる変わったりして、何回も同じものを修正・作り直しすることになる可能性があります。逆に、事前から細かく機能を決めれば、「これも入れたい」「それも入れたい」など、作る途中で思いつきのアイディアに影響されず、一気にサイトを作ることが可能です。</p>
+<p>最初からざっくりした考えをまとまらないと、企画資料や制作が途中でぐるぐる変わったりして、何回も同じものを修正・作り直しすることになる可能性があります。</p>
+<p>逆に、事前から細かく機能を決めれば「これも入れたい」「それも入れたい」など、作る途中で思いつきのアイディアに影響されず、一気にサイトを作ることが可能です。</p>
 
 <h2><a id="h1-3"></a><span class="secno">1.3　</span>今回の要件定義について</h2>
-<p>今回「LoveLive！参加者募集サイト」の制作を例として説明すると。</p>
-<p>− どんなウェブサイトを作るか。- 「LoveLive！」のアニメで登場された、アイドルコンテスト「LoveLive！公式サイト」を作る。</p>
-<p>今回はすでに設計されたものがあるため、手短く要件定義することができます。通常の場合、まずはターゲットユーザーを定義して、ターゲットユーザーにどんな体験を与えたいのかを考えないと行けないです。ここではすでにあったものから推定すいれば、もともとサイトを作った人が何を考えたかがわかると思います。今回の制作は、工数などを考えて、TOPページとライブ中継ページの2ページだけにすることになります。と、このような必要かどうかの判断も、要件定義の一部です。</p>
+<p>今回のラブライブ！参加者募集サイトの制作を例として説明すると、</p>
+<ul>
+<li>どんな Web サイトを作るか<ul>
+<li>ラブライブ！のアニメで登場した、アイドルコンテスト募集サイト」を作る</li>
+</ul>
+</li>
+</ul>
+<p>今回はすでに設計されたものがあるため、手短く要件定義することができます。</p>
+<p>通常、まずはターゲットユーザを定義し、ターゲットユーザにどんな体験を与えたいのかを考えないといけないです。ここではすでにあったものから推定すれば、もともとサイトを作った人が何を考えたかがわかると思います。今回の制作は、工数などを考えて、TOP ページとライブ中継ページの2ページだけにすることにしました。と、このような必要かどうかの判断も、要件定義の一部です。</p>
 
 <h2><a id="h1-4"></a><span class="secno">1.4　</span>要素とは</h2>
-<p>ウェブページにあるボタン、画像、テキストなど様々な情報表示、動作するものが、このウェブサイトの「要素」と呼ばれています。通常でしたら、どの要素をどの位置に置くかは、ターゲットユーザーを分析した上で、設計者よりきちんと考えて最も合理的だと思われる位置に決まります。ターゲットユーザーがよく使うボタン・機能をクリックしやすいところに置くや、設計者がユーザーに一番伝えたいことを見やすいところに置くなど…いろんなことを考えて「最も合理的」な方向を目指して設計を行うことです。今回はすでにあるサイトを作ることなので、「要素や位置が決められた」状態で製作用の企画資料を作ればOKという、深く考えることがいらなくて比較的に楽な作業です。</p>
+<p>ウェブページにあるボタンや画像、テキストなど、様々な情報表示・動作するものが、この Web サイトの「要素」と呼ばれます。</p>
+<p>どの要素をどの位置に置くかは、ターゲットユーザを分析した上で設計者よりきちんと考えて最も合理的だと思われる位置に決まります。</p>
+<p>ターゲットユーザが製作者が想定した目的に沿ってよく使うボタン・機能をクリックしやすいところに置くや、設計者がユーザに一番伝えたいことを見やすいところに置くなど…いろんなことを考えて「最も合理的」な方向を目指して設計を行うべきです。</p>
+<p>今回はすでにあるサイトを作ることなので、「要素や位置が決められた」状態で製作用の企画資料を作れば OK という、深く考えることがいらず、比較的に楽な作業になります。</p>
 
 <h2><a id="h1-5"></a><span class="secno">1.5　</span>今回の要素整理について</h2>
-<p>アニメ内のキャプチャからサイトの構成要素を分析してみましょう。</p>
-<p>まず、ウェブサイトのグローバルメニュに記載されている内容はこちらーーTOP、LIVE STAGE、OUTLINE、SCHEDULE、SPECIAL、LINK、FAQ</p>
-<p>1つずつ見て行きましょう。</p>
+<p>アニメ内のキャプチャからサイトの構成要素を分析してみます。</p>
+<p>まず、Web サイトのグローバルメニュに記載されている内容はこちらーー</p>
+<ul>
+<li>TOP</li>
+<li>LIVE STAGE</li>
+<li>OUTLINE</li>
+<li>SCHEDULE</li>
+<li>SPECIAL</li>
+<li>LINK</li>
+<li>FAQ</li>
+</ul>
+<p>1つずつ見ていきます。</p>
 
 <h3><a id="h1-5-1"></a>TOP</h3>
-<p>字面通り、ウェブサイトのTOPページを意味するはずで、よくある機能で、ユーザーがウェブサイトを見ている時、どのページにいても1クリックでTOPページへ戻ることができます。人の閲覧習慣に準じて一番見やすい左上に置いたのは、このサイトの設計者である人に、ターゲットユーザーにとって一番大事、もしくはターゲットユーザーに一番クリックしてほしいと思われるからです。また、TOPページを構成する要素はグローバルメニュ以外、各ページの共通要素もあります。ヘッダーにロゴと、「メールマガジン」、facebookシェア、つぶやき、お問い合わせがあって、フッターには利用規約や権利情報表示などが掲載されています。</p>
+<p>字面通り、Web サイトの TOP ページを意味するはずで、よくある機能で、ユーザが Web サイトを見ている時、どのページにいても1クリックで TOP ページへ戻ることができます。</p>
+<p>人の閲覧習慣に準じて一番見やすい左上に置いたのは、このサイトの設計者である人に、ターゲットユーザにとって一番大事、もしくはターゲットユーザに一番クリックしてほしいと思われるためです。また、TOP ページを構成する要素はグローバルメニュ以外、各ページの共通要素もある。</p>
+<p>ヘッダにロゴ・メールマガジン・シェア・つぶやき・お問い合わせがあって、フッタには利用規約や権利情報表示などが掲載されている。</p>
 
 <h3><a id="h1-5-2"></a>LIVE STAGE</h3>
-<p>アニメ内でネット生中継するページが見えます。そのシーンでは「CONTENTS」というテキストになっていますが、位置的にはこれと同じです。クリックしてページ遷移すると、メニュにあるテキストが変わるという事自体はできなくもないが、実際に必要がない場合がほとんどなので、ここでは全部「LIVE STAGE」に統一しましょう。そして、この「LIVE STAGE」の中身は、キャプチャから見て推測するとこういった要素で構成されているかと思います。「映像タイトル」、「出演者」、「映像生中継」、「映像情報」、「ユーザーコメント」、「投票」、「広告スペース」</p>
-<p>参加するアイドルグループがみるOUTLINEやSCHEDULEなどより左に位置することは、設計者が参加者の他に、ライブをネット上で見るファンも大事にするからでしょう。</p>
-<p>最初に書いた要件定義を見ると、他のページは今回全部作る必要がないため、実はここまで書いてOKです。どこまで資料が必要なのかは、要件定義で明確化されているため、余計な作業を増やして時間を無駄遣いすることがなくなるでしょう。</p>
-<p>余興でこのサイトに関して筆者の推測を下に置いときます。ご参考までにしていただければと思います。</p>
+<p>アニメ内でネット生中継するページだと思われます。そのシーンでは CONTENTS というテキストになっているが、位置的にはこれと同じです。</p>
+<p>クリックでページ遷移すると、メニュにあるテキストが変わるという事自体はできなくもないが、実際に必要のない場合がほとんどなので、ここでは全部 LIVE STAGE に統一します。そして、この LIVE STAGE の中身は、キャプチャから見て推測するとこういった要素で構成されているかと思います。</p>
+<ul>
+<li>映像タイトル</li>
+<li>出演者</li>
+<li>映像生中継</li>
+<li>映像情報</li>
+<li>ユーザコメント</li>
+<li>投票</li>
+<li>広告スペース</li>
+</ul>
+<p>参加するアイドルグループが見る OUTLINE や SCHEDULE などがより左に位置することは、設計者が参加者の他に、ライブをネット上で見るファンも大事にするからだと思われます。</p>
+<p>最初に書いた要件定義を見ると、他のページは今回全部作る必要がないため、実はここまで書いて OK 。どこまで資料が必要なのかは、要件定義で明確化されているため、余計な作業を増やして時間を無駄遣いすることがなくなるでしょう。</p>
+<p>余興でこのサイトに関して筆者の推測を下に置きます。参考にしてみてください。</p>
 
 <h3><a id="h1-5-3"></a>OUTLINE</h3>
 <p>テキストで推測すると、たぶんコンテストの概要や募集要項などの内容が記載されています。</p>
@@ -49,46 +83,83 @@
 <p>テキストで推測すると、たぶんコンテストの選考スケジュールや催行スケジュールなどの内容が記載されています。</p>
 
 <h3><a id="h1-5-5"></a>SPECIAL</h3>
-<p>テキストだけで何が掲載されているか推測しにくいけど、たぶん歴代優勝者コメントやコラボキャンペーンなどの情報でしょうか。</p>
+<p>テキストだけで何が掲載されているか推測しにくいけど、たぶん歴代優勝者コメントやコラボキャンペーンなどの情報だと思われます。</p>
 
 <h3><a id="h1-5-6"></a>LINK</h3>
-<p>関連法人、個人の公式サイトなどが掲載されているでしょう。</p>
+<p>関連法人、個人の公式サイトなどが掲載されていると思われます。</p>
 
 <h3><a id="h1-5-7"></a>FAQ</h3>
-<p>よくある質問やお問い合わせなどの内容が掲載されているでしょう。</p>
-<p>以上の要件定義、要素整理に基いて、サイトマップと仕様書などの作成を一気にやりましょう！</p>
-<p>【画像1　要件定義と要素整理】</p>
+<p>よくある質問やお問い合わせなどの内容が掲載されていると思われます。</p>
+<p>以上の要件定義、要素整理に基いて、サイトマップと仕様書などの作成をしていきます。</p>
+<div id="ch1_01" class="image">
+<img src="images/ch1_01.jpg" alt="要素整理" />
+<p class="caption">
+図1.1: 要素整理
+</p>
+</div>
 
 <h2><a id="h1-6"></a><span class="secno">1.6　</span>サイトマップの作成</h2>
-<p>ウェブサイトのページ数とページの階層を表示する図がサイトマップです。サイトマップがあれば、サイトに何ページあるかと、ページとページの関連性などが一見で分かります。それを見て、工数なども推測できます。ページ数の多いサイトなら、サイトマップがあれば制作もだいぶ早くなるし、ページ漏れのリスクもだいぶ減らせられます。</p>
+<p>Web サイトのページ数とページの階層を表示する図がサイトマップです。サイトマップがあれば、サイトに何ページあるかと、ページとページの関連性などが一見で分かる。それで工数なども推測できます。ページ数の多いサイトなら、サイトマップがあれば制作もだいぶ早くなるし、ページ漏れのリスクもだいぶ減らすことができます。</p>
 
 <h2><a id="h1-7"></a><span class="secno">1.7　</span>サイトマップの書き方</h2>
-<p>個人的にオススメなツールはエクセルです。画像を作るというイメージでパワーポイントがいいかと思う方もいるかもしれないが、実はセル結合したり枠線を描画したりするほうが楽です。特に大規模のサイトのサイトマップを書く際に、エクセルは無限に書けますので、非常に使いやすいと思います。エクセルがない場合は、グーグルドライブのスプレッドシートも必要な機能揃っていますからオススメです。</p>
-<p>作るときは、階層などを意識して、外部リンクを明確に表示するよう作ったほうがオススメです。</p>
+<p>個人的にオススメなツールはエクセルです。画像を作るというイメージでパワーポイントがいいかと思う方もいるかもしれないが、実はセル結合したり枠線を描画したりするほうが楽になります。特に大規模のサイトのサイトマップを書く際に、エクセルは無限に書けるので、非常に使いやすいと思います。エクセルがない場合は、グーグルドライブのスプレッドシートも最低限な機能揃っていますからおすすめです。</p>
+<p>作るときは、階層などを意識して、外部リンクを明確に表示するよう作ったほうがおすすめです。</p>
 
 <h2><a id="h1-8"></a><span class="secno">1.8　</span>今回のサイトマップについて</h2>
-<p>第一章で書いた「要件整理」をちゃんとまとまれば、サイトマップはほぼ考えずに作れると思います。今回作るのは「TOP」と「LIVE STAGE」の2ページです。さらに、「LIVE STAGE」ページ内に、ポップアップ画面を設計しました。一番上層のページをTOPにして、下層にLIVE STAGEを書きます。他に外部リンクであるSNSボタンをつけて完成です。今回は極めて簡単な内容だけど、本当は各下層ページに更に下層ページある、ポップアップやエラーページまで、サイトにあらゆる表示可能なページを全部作らないといけないです。なので、一回ドキュメントを起こす前に、紙で草稿を書くこともオススメです。</p>
-<p>【画像2　サイトマップ】</p>
+<p>第一章で書いた「要件整理」をちゃんとまとまれば、サイトマップはほぼ考えずに作れると思います。今回作るのは TOP と LIVE STAGE の2ページです。さらに、LIVE STAGE ページ内に、ポップアップ画面を設計しました。一番上層のページを TOP にして、下層に LIVE STAGE を書きます。他に外部リンクである SNS ボタンをつけて完成です。今回は極めて簡単な内容だけど、本当は各下層ページに更に下層ページある、ポップアップやエラーページまで、サイトにあらゆる表示可能なページを全部作らないといけないです。なので、一回ドキュメントを起こす前に、紙で草稿を書くこともおすすめです。</p>
+<div id="ch1_02" class="image">
+<img src="images/ch1_02.jpg" alt="サイトマップ" />
+<p class="caption">
+図1.2: サイトマップ
+</p>
+</div>
 
 <h2><a id="h1-9"></a><span class="secno">1.9　</span>ワイヤーフレームと仕様書の作成</h2>
-<p>ワイヤフレームはサイトの各ページごとにある、1ページにある要素の種類・数・大体の位置を示すものです。仕様書は、それぞれの要素に具体的に何をどう表示するか、動作の演出などを明記するものです。場合によって、両方をまとめて書くこともありますが、分けて書くこともあります。サイトの内容が豊かであればあるほど、仕様書の内容が多くなるので分けて書くことをおすすめです。1ページずつにワイヤーフレームと仕様書は必要なので、ページ数が多ければ多いほど、ワイヤーフレームと仕様書のページ数も多くなります。</p>
+<p>ワイヤーフレームはサイトの各ページごとにある、1ページにある要素の種類・数・大体の位置を示すものです。仕様書は、それぞれの要素に具体的に何をどう表示するか、動作の演出などを明記するものです。場合によって、両方をまとめて書くこともあるが、分けて書くこともあります。サイトの内容が豊かであればあるほど、仕様書の内容が多くなるので分けて書くことをおすすめです。1ページずつにワイヤーフレームと仕様書は必要なので、ページ数が多ければ多いほど、ワイヤーフレームと仕様書のページ数も多くなります。</p>
 
 <h2><a id="h1-10"></a><span class="secno">1.10　</span>ワイヤーフレームと仕様書の心得</h2>
-<p>ツール：ワイヤーフレームはパワーポイントでもエクセルでもいいですが、仕様書はエクセルをおすすめです。要素の分類：大枠3種類に分けられるーー画像、テキスト、ボタン。更に動作の要素を入れるとーースクロール、ポップアップなど。色で分けるか、もしくは形で分けるように書くことをおすすめです。デザイン回避：ワイヤーフレームはあくまで要素がページ内にあることを示すための資料なので、デザインなどはなるべく入れないことをおすすめです。何故かと言うと、このワイヤーフレームを参考にデザイナーさんがよしなにグラフィックとUIを作ってくれますから。どんなデザインがいいのかは、アートディレクターの仕事なので、企画資料としては見やすいようにすることが最優先です。派手な色をつけたりいろんな形を使ったりすると、資料自体がわかりづらくなって、デザイナーさんのクリエイト活動に妨害する可能性もあります。仕様書は箇条書き：1つの要素、1つの動作に対して、箇条書きする必要があります。仕様書を見るエンジニアさんは、考えずにコーディングできることを目指しましょう。</p>
+<p>ツール：ワイヤーフレームはパワーポイントでもエクセルでもいいが、仕様書はエクセルをおすすめです。要素の分類：大枠3種類に分けられるーー画像、テキスト、ボタン。更に動作の要素を入れるとーースクロール、ポップアップなど。色で分けるか、もしくは形で分けるように書くことがおすすめです。余計な情報を入れない：ワイヤーフレームはあくまで要素がページ内にあることを示すための資料なので、色などはなるべく入れないことがおすすめです。何故かと言うと、ワイヤーフレームを参考にデザイナがグラフィックと UI の制作を行うので、余計な情報があると資料自体がわかりづらくなり、混乱を招く可能性があります。どんなグラフィックや UI の方向性にするかは、アートディレクタの仕事なので、企画資料としては見やすいようにすることが最優先です。仕様書は箇条書き：1つの要素、1つの動作に対して、箇条書きする必要があります。仕様書を見るエンジニアさんは、考えずにコーディングできることを目指します。</p>
 
 <h2><a id="h1-11"></a><span class="secno">1.11　</span>今回のワイヤーフレームと仕様書について</h2>
-<p>要件定義ですでにわかったのは、今回のページ数も要素も少ないです。なので作業を早めにするため、ワイヤーフレームと仕様書をまとめて書きました。1ページずつを見て行きましょう。</p>
+<p>要件定義ですでにわかったのは、今回のページ数も要素も少ないです。なので作業を早めにするため、ワイヤーフレームと仕様書をまとめて書きました。1ページずつ見ていきましょう。</p>
 
 <h3><a id="h1-11-1"></a>TOP</h3>
-<p>共通のヘッダー、グローバルメニュ、フッター以外、アニメ内では、画像の展示のみに見えます。画像の表示方法はカルーセルということはわかりますが、下にあるドットがアニメのキャプチャから見るとフッター内になってしまいます。どう見て要素としてフッター内に入れる可能性が少ないと思います。LIVE STAGEにもドットがフッター内にあるけど、生中継のページになってますので、実際のサイトでしたら映像にはこういう仕様も取らないはずだと思います。なので、考えた結果として、画像のカルーセル表示だけにしました。推測した結果、トップページの訴求は、「コンテストの盛り上がり」と「歴代受賞者の宣伝」で、華やかなポスターをいっぱい見れる設計だと思います。</p>
-<p>【画像3　TOP仕様書】</p>
+<p>共通のヘッダ、グローバルメニュ、フッタ以外、アニメ内では、画像の展示のみに見えます。画像の表示方法はカルーセルということはわかりますが、下にあるドットがアニメのキャプチャから見るとフッタ内になっているというのが極めて可能性低い設計です。LIVE STAGE にもドットがフッタ内にあるけど、生中継のページになっているので、実際のサイトでしたら映像にはこういう仕様も取らないはずだと思われます。なので、考えた結果として、画像のカルーセル表示だけにしました。推測した結果、トップページの訴求は、「コンテストの盛り上がり」と「歴代受賞者の宣伝」で、華やかな画像をいっぱい見れる設計だと思われます。</p>
+<div id="ch1_03" class="image">
+<img src="images/ch1_03.jpg" alt="トップページのワイヤーフレーム" />
+<p class="caption">
+図1.3: トップページのワイヤーフレーム
+</p>
+</div>
 
 <h3><a id="h1-11-2"></a>LIVE STAGE</h3>
-<p>共通要素の他に、一見「ニコニコ動画」の仕様似てます。生中継はもちろん映像が中心で、ほかの機能は映像と関連するものになっていると想定しています。更に、映像エリアの隣に広告スペースに見えます。たぶんここでスポンサーたちの広告が掲載されているだろう。ちょっと説明しますと、もともと「ニコニコ動画」みたいなコメント機能があると思われますが、今回は工数が足りないためちょっと改造して、「何かをコメントする」という似てる体験をユーザーに与えるためSNSコメントという形を取らせていただきました。</p>
-<p>【画像4　LIVE STAGE仕様書】</p>
+<p>共通要素の他に、一見「ニコニコ動画」の仕様に似ています。生中継はもちろん映像が中心で、ほかの機能は映像と関連するものになっていると想定している。更に、映像エリアの隣に広告スペースに見えます。おそらくここに広告が掲載されているでしょう。ちょっと説明すると、もともと「ニコニコ動画」のようなコメント機能があると思われますが、今回は工数が足りないためちょっと改造して、「何かをコメントする」という似てる体験をユーザに与えるため SNS コメントという形にしました。</p>
+<div id="ch1_04" class="image">
+<img src="images/ch1_04.jpg" alt="ライブステージのワイヤーフレーム" />
+<p class="caption">
+図1.4: ライブステージのワイヤーフレーム
+</p>
+</div>
 
 <h3><a id="h1-11-3"></a>ほかポップアップ</h3>
-<p>「サイトマップ」について書いてましたが、エラーページも想定するようにと。ただしエラーが発生しない限り、エラーページも見れないので、ここではエラーの代わりに「まだ作ってない」の提示ポップアップを用意しました。ほかに、映像コメントの体験を与えるためのSNSコメントポップアップと、投票結果再現するための結果ポップアップを作りました。上記ポップアップは、1ページとして存在するのではないため、サイトマップでは仕様をページと区別して反映しました。</p>
-<p>【画像5〜画像7　ポップアップ仕様書×3】</p>
+<p>「サイトマップ」について書いたが、エラーページも想定しました。ただしエラーが発生しない限り、エラーページも見れないので、検証がほとんどないと思われるため、ここではエラーページの代わりに「まだ作ってない」のポップアップを用意しました。ほかに、映像コメントの体験を与えるための SNS コメントポップアップと、投票結果再現するための結果ポップアップを作りました。上記ポップアップは、1ページとして存在しないため、サイトマップでは仕様をページと区別して反映しました。</p>
+<div id="ch1_05" class="image">
+<img src="images/ch1_05.jpg" alt="まだ作っていないというポップアップのワイヤーフレーム" />
+<p class="caption">
+図1.5: まだ作っていないというポップアップのワイヤーフレーム
+</p>
+</div>
+<div id="ch1_06" class="image">
+<img src="images/ch1_06.jpg" alt="SNS のコメントポップアップのワイヤーフレーム" />
+<p class="caption">
+図1.6: SNS のコメントポップアップのワイヤーフレーム
+</p>
+</div>
+<div id="ch1_07" class="image">
+<img src="images/ch1_07.jpg" alt="投票結果を再現するためのワイヤーフレーム" />
+<p class="caption">
+図1.7: 投票結果を再現するためのワイヤーフレーム
+</p>
+</div>
 </body>
 </html>
