--- a/ch02.html
+++ b/ch02.html
@@ -20,7 +20,7 @@
 <li>作業履歴を記録するためのバージョン管理ソフト</li>
 <li>書いたソースコードに対して細かな作業をやるためのツール</li>
 </ul>
-<p>それでは、一つ一つ解説していきます。</p>
+<p>一つずつ解説していきます。</p>
 
 <h3><a id="h2-1-1"></a>エディタ・IDE</h3>
 <p>ソースコードを書くために必要なエディタや IDE (統合開発環境)を始めに準備する必要があります。</p>
@@ -70,17 +70,21 @@
 
 <h3><a id="h2-2-1"></a>ググる</h3>
 <p>まずは ググりましょう。ググる方法にも多く結果が出やすい手法があります。</p>
-<p><strong>ググるための言葉を区切る</strong></p>
-<p>例えば「CSSで背景色をつけるやり方」と検索した時よりも「CSS 背景色 やり方」で検索したほうが検索結果の件数が増えます。</p>
-<p>検索エンジンは「CSSで背景色をつけるやり方」のような文章を受け付けるのがまだ苦手です。そのため、文章よりも単語ごとに区切ったほうが検索結果の件数が増えます。</p>
-<p><strong>「○○ とは」で検索する</strong></p>
-<p>より入門的な内容を探したい場合は「○○ とは」で検索することをおすすめします。例えば「JavaScript とは」や「CSS とは」といった感じです。</p>
-<p>だいたい「○○ とは」というタイトルで入門的な記事を書く傾向にあるため、このように検索したほうがより入門よりの記事が引っかかります。</p>
-<p><strong>エラーメッセージをそのまま検索する</strong></p>
+
+<h4><a id="h2-2-1-1"></a>ググるための言葉を区切る</h4>
+<p>例えば「CSS で背景色をつけるやり方」と検索した時よりも「CSS 背景色 やり方」で検索したほうが検索結果の件数が増えます。</p>
+<p>検索エンジンは「CSS で背景色をつけるやり方」のような文章を受け付けるのがまだ苦手です。そのため、文章よりも単語ごとに区切ったほうが検索結果の件数が増えます。</p>
+
+<h4><a id="h2-2-1-2"></a>「何々 とは」で検索する</h4>
+<p>より入門的な内容を探したい場合は「何々 とは」で検索することをおすすめします。例えば「JavaScript とは」や「CSS とは」といった感じです。</p>
+<p>だいたい「何々 とは」というタイトルで入門的な記事を書く傾向にあるため、このように検索したほうがより入門よりの記事が引っかかります。</p>
+
+<h4><a id="h2-2-1-3"></a>エラーメッセージをそのまま検索する</h4>
 <p>何かしらを実行してそれが上手くいかなかった際に、表示されたエラーメッセージをそのまま検索すると、解決方法が出やすくなります。</p>
 <p>しかし、だいたいは英語(そしてだいたいは Stack Overflow というサイト)なので、そこは頑張って内容を読み取るしかないです。</p>
 <p>もし検索してでてきた内容が英語だったら、それを自分のブログに日本語の記事として掲載すると、後から検索した人が助かるかもしれません。また、自分にとっても記憶に残りやすくなるので良いと思います。</p>
-<p><strong>期間を絞る</strong></p>
+
+<h4><a id="h2-2-1-4"></a>期間を絞る</h4>
 <p>JavaScript の情報は2011年以前の情報はあまり役に立たないことが多いです。</p>
 <p>そこで Google の検索ツールの「期間を指定」を使って、なるべく新しい情報のみを検索するようにします。</p>
 <p>初期の状態では、一ヶ月前の検索結果の前がいきなり一年前と使い勝手がよくないです。</p>
@@ -88,8 +92,7 @@
 
 <h3><a id="h2-2-2"></a>周りの人に聞く</h3>
 <p>検索をしても、あまり良い情報に巡りあえない場合があります。そういった場合、周りに聞ける環境であれば聞くのが良いでしょう。</p>
-<p>聞き方としてはおそらく解答にかかるであろう時間を予測して「○○について聞きたいのですが、○分ほど時間ありますか？」と聞くのが良いでしょう。</p>
-<p>また、相手の都合の良い時に返信してもらうように、できれば口頭でまず聞くのではなく、チャット上でメッセージを送信して反応してくれるのを待つというのが良いです。</p>
+<p>聞き方としてはおそらく解答にかかるであろう時間を予測して「『何々』について聞きたいのですが、○分ほど時間ありますか？」と聞くのが良いでしょう。また、相手の都合の良い時に返信してもらうように、できれば口頭でまず聞くのではなく、チャット上でメッセージを送信して反応してくれるのを待つというのが良いです。</p>
 <p>その場合、15分くらいして、何も返信がなかったら口頭で聞くようにします。</p>
 
 <h3><a id="h2-2-3"></a>本を読む</h3>
@@ -124,6 +127,21 @@
 <p>また、そのまま使わないにしろ、例えばイラストをトレースして自分流に編集して公開したとしても、それもまた問題になります。</p>
 <p>この辺りの話は、<a href="http://www.bengo4.com/houmu/17/1263/n_3282/" class="link">大人気ゲーム「刀剣乱舞」に「トレパク」疑惑が続々浮上——どんな問題があるのか？|弁護士ドットコムニュース</a>を見ると良いでしょう。</p>
 
+<h3><a id="h2-3-3"></a>イラストや素材を自作できない場合どうしたら良いか？</h3>
+<p>とはいえ、イラストや素材を自作できない場合、サイトを作る時に殺風景な見た目になりがちです。それでも、殺風景にならないためにはどうしたら良いでしょうか？</p>
+<p>そのための案として、二つ提案できることがあります。</p>
+
+<h4><a id="h2-3-3-1"></a>写真や配色や隙間を上手く使う</h4>
+<p>まず一つ目は、写真や配色や隙間を上手く使って、見た目が簡素でもセンスが良いサイトを作ることです。まず思い浮かぶのは <a href="http://www.apple.com/jp/" class="link">Apple Japan</a> のサイトです。サイトの要素的にはそこまで多くないですが、写真と隙間を上手く使って、かっこ良いという印象を生み出しています。</p>
+<p>また <a href="https://www.google.com/nexus/" class="link">Nexus - Google</a> も Apple と同じくそこまで多くない要素を、大きな写真や隙間や影を効果的に使ってやはりかっこ良いという印象があります。</p>
+<p>しかし、写真の構図にこだわったり、隙間も変な風にならないように適切に使わないといけないため、簡単そうに見えますが、難易度は高いです。</p>
+
+<h4><a id="h2-3-3-2"></a>写真素材サイトを使う</h4>
+<p>二つ目は、写真素材サイトを使うことです。商用利用可かつ、クレジット表記が不要という写真素材サイトは多くあります。有名なサイトとして、<a href="https://www.pakutaso.com/" class="link">ぱくたそ</a>があります。また女性向けの写真素材サイトとしては、<a href="http://girlydrop.com/" class="link">GIRLY DROP(ガーリードロップ)</a> というサイトがあります。</p>
+<p>またこういった「商用利用可かつ、クレジット表記が不要」というサイトを横断的に検索できる<a href="http://www.tadapic.com/" class="link">タダピク</a>というサイトもあります。</p>
+<p>このような写真素材サイトを使うことで、高品質な写真を自分が撮影することなく使うことができます。ただし、各写真素材サイトでは使用にあたっての注意が書かれているサイトがほとんどです。</p>
+<p>写真素材を使う際は、その注意項目を読んだ上でそれに沿って使用するようにしてください。</p>
+
 <h2><a id="h2-4"></a><span class="secno">2.4　</span>ライブラリ選定</h2>
 <p>いろいろと前提を踏まえた上で、ライブラリの選定をおこなっていきます。</p>
 <p>選定の基準としては、各個人や企業でまちまちだとは思いますが、自分が気をつけているところを書いていきます。</p>
@@ -142,17 +160,17 @@
 <p>しかし、最新コミット日がある程度前の日にちだと Issue や Pull Request の多さは「放置されているから」ということになります。</p>
 <p>なお、最新コミット日が三ヶ月前以上だと危険信号で、六ヶ月以上だと何らかの事象が起きない限りはそのライブラリは死んだと考えています。</p>
 
-<h3><a id="h2-4-3"></a>ソースソースコードの全体が把握できる、もしくは、ドキュメントが揃っている</h3>
-<p>次に、ソースソースコードの全体が把握しやすいか、もしくは、ドキュメントが揃っていてそれが読みやすいかどうかを見ます(もちろん両方揃っているのが好ましいです)。</p>
-<p>例えば、ソースソースコードの全体が把握しやすいライブラリとしては、<a href="http://backbonejs.org/" class="link">Backbone.js</a>が挙げられます。</p>
+<h3><a id="h2-4-3"></a>ソースコードの全体が把握できる、もしくは、ドキュメントが揃っている</h3>
+<p>次に、ソースコードの全体が把握しやすいか、もしくは、ドキュメントが揃っていてそれが読みやすいかどうかを見ます(もちろん両方揃っているのが好ましいです)。</p>
+<p>例えば、ソースコードの全体が把握しやすいライブラリとしては、<a href="http://backbonejs.org/" class="link">Backbone.js</a>が挙げられます。</p>
 <p>ドキュメントもあり、機能について網羅はされているのですが、見やすいかというと少し疑問が生まれます。</p>
-<p>しかし、<a href="https://github.com/jashkenas/backbone/blob/master/backbone.js" class="link">ソースソースコード</a>はまとまりの単位が小さいため、1,877行(2015/7/10現在)あるとはいえ、全体を読もうと思えば読めなくはないものとなっています。</p>
+<p>しかし、<a href="https://github.com/jashkenas/backbone/blob/master/backbone.js" class="link">ソースコード</a>はまとまりの単位が小さいため、1,877行(2015/7/10現在)あるとはいえ、全体を読もうと思えば読めなくはないものとなっています。</p>
 <p>次に、ドキュメントが揃っていて読みやすい例としては、<a href="http://jquery.com/" class="link">jQuery</a> が挙げられます。</p>
-<p>ソースソースコード自体は <a href="https://github.com/jquery/jquery/tree/master/src" class="link">リポジトリの src ディレクトリ配下</a>にまとまっており、機能ごとにまとまってはいるのですが、ファイル数が多く全体を把握しようとすると骨が折れます。</p>
-<p>ただ、<a href="https://api.jquery.com/" class="link">ドキュメント</a>が見やすくまとまっており、普段はソースソースコードを見なくてもどのように使うのか調べるのに困らないという状況になっています。</p>
+<p>ソースコード自体は <a href="https://github.com/jquery/jquery/tree/master/src" class="link">リポジトリの src ディレクトリ配下</a>にまとまっており、機能ごとにまとまってはいるのですが、ファイル数が多く全体を把握しようとすると骨が折れます。</p>
+<p>ただ、<a href="https://api.jquery.com/" class="link">ドキュメント</a>が見やすくまとまっており、普段はソースコードを見なくてもどのように使うのか調べるのに困らないという状況になっています。</p>
 <p>ちなみに、両方揃っている例としては <a href="http://hokaccha.github.io/js-flipsnap/" class="link">flipsnap.js</a> が挙げられます。</p>
 <p>flipsnap.js はドキュメントに、どういった環境に対応しているか、どのようにすれば動作するようになるか、使い方の例などがよくまとまっており、使いはじめるのにあれこれ調べなくてもドキュメント内で完結できるライブラリになっています。</p>
-<p>また<a href="https://github.com/hokaccha/js-flipsnap/blob/master/flipsnap.js" class="link">ソースソースコード自体</a>も、まとまりの単位が小さく、読みやすいものとなっています。</p>
+<p>また<a href="https://github.com/hokaccha/js-flipsnap/blob/master/flipsnap.js" class="link">ソースコード自体</a>も、まとまりの単位が小さく、読みやすいものとなっています。</p>
 <p>では、これらを踏まえた上で、実際に選定をおこなっていきましょう。</p>
 
 <h2><a id="h2-5"></a><span class="secno">2.5　</span>ライブラリの選定 CSS 編</h2>
@@ -181,8 +199,8 @@
 <p>「カルーセル」は <a href="http://www.nike.com/jp/ja_jp/" class="link">Nike</a> などで使われている「注目させたい複数の画像を次々に横にスライドさせて表示させる」ものです。</p>
 <p>このカルーセルを実現するために、今回は <a href="http://meandmax.github.io/lory/" class="link">lory</a> というライブラリを使います。この lory というライブラリを選んだ理由は以下の通りです。</p>
 <ul>
-<li>外部のライブラリに依存せず、lory だけを読みこめばそれでカルーセルが実装することができる</li>
-<li>ライブラリのソースソースコードの全体が把握しやすい(<a href="https://github.com/meandmax/lory/blob/73244bb780e0214d7c4b446d27295a80c6872bd0/dist/lory.js" class="link">2015/7/10現在で520行</a>)</li>
+<li>外部のライブラリに依存せず、lory だけを読みこめばカルーセルの実装をおこなえる</li>
+<li>ライブラリのソースコードの全体が把握しやすい(<a href="https://github.com/meandmax/lory/blob/73244bb780e0214d7c4b446d27295a80c6872bd0/dist/lory.js" class="link">2015/7/10現在で520行</a>)</li>
 </ul>
 <p>なお、次々に横にスライドさせて表示させる際に、最後まで到達した時にまた最初まで戻る、無限ループがいらなければ <a href="http://hokaccha.github.io/js-flipsnap/" class="link">flipsnap.js</a> もおすすめです。</p>
 <p>また jQuery に依存するライブラリでは <a href="http://kenwheeler.github.io/slick/" class="link">slick</a> や <a href="http://owlgraphic.com/owlcarousel/" class="link">Owl Carousel</a> がよく使われます。</p>
