[ci skip] Update with cb0321a

--- a/ch03.html
+++ b/ch03.html
@@ -64,18 +64,18 @@
 </div>
 <p>次に title 要素を書きます。title 要素はページのタイトルを示す要素です。たとえば、トップページでは以下のように書きます。</p>
 <div class="emlist-code">
-<pre class="emlist">&lt;title&gt;LoveLife! 2nd Tournament&lt;/title&gt;
+<pre class="emlist">&lt;title&gt;LoveLive! 2nd Tournament&lt;/title&gt;
 </pre>
 </div>
 <p>ライブステージページでは、title 要素の内容をライブステージページ用に書きかえます。</p>
 <div class="emlist-code">
-<pre class="emlist">&lt;title&gt;Live stage - LoveLife! 2nd Tournament&lt;/title&gt;
+<pre class="emlist">&lt;title&gt;Live stage - LoveLive! 2nd Tournament&lt;/title&gt;
 </pre>
 </div>
 <p>次にサイトの説明とキーワードを書きます。サイトの説明は特徴を示すように書きます。</p>
 <p>キーワードも、サイトに関連するキーワードのみを並べて書きます。</p>
 <div class="emlist-code">
-<pre class="emlist">&lt;meta name=&quot;description&quot; content=&quot;ラブライフ！の参加者募集サイトです&quot;&gt;
+<pre class="emlist">&lt;meta name=&quot;description&quot; content=&quot;ラブライブ！の参加者募集サイトです&quot;&gt;
 &lt;meta name=&quot;keywords&quot; content=&quot;特設サイト&quot;&gt;
 </pre>
 </div>
@@ -100,8 +100,8 @@
 <div class="emlist-code">
 <pre class="emlist">&lt;head&gt;
     &lt;meta charset=&quot;UTF-8&quot;&gt;
-    &lt;title&gt;LoveLife! 2nd Tournament&lt;/title&gt;
-    &lt;meta name=&quot;description&quot; content=&quot;ラブライフ！の参加者募集サイトです&quot;&gt;
+    &lt;title&gt;LoveLive! 2nd Tournament&lt;/title&gt;
+    &lt;meta name=&quot;description&quot; content=&quot;ラブライブ！の参加者募集サイトです&quot;&gt;
     &lt;meta name=&quot;keywords&quot; content=&quot;特設サイト&quot;&gt;
     &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width&quot;&gt;
     &lt;link rel=&quot;stylesheet&quot; href=&quot;styles/bootstrap.min.css&quot;&gt;
@@ -142,7 +142,7 @@
 <div class="emlist-code">
 <pre class="emlist">&lt;div class=&quot;navbar-header&quot;&gt;
     &lt;h1 class=&quot;navbar-brand  ll-logo&quot;&gt;
-        &lt;img src=&quot;&quot; alt=&quot;LoveLife!&quot;&gt;
+        &lt;img src=&quot;&quot; alt=&quot;LoveLive!&quot;&gt;
     &lt;/h1&gt;
 &lt;/div&gt;
 </pre>
@@ -163,7 +163,7 @@
     &lt;div class=&quot;container-fluid  ll-container&quot;&gt;
         &lt;div class=&quot;navbar-header&quot;&gt;
             &lt;h1 class=&quot;navbar-brand  ll-logo&quot;&gt;
-                &lt;img src=&quot;&quot; alt=&quot;LoveLife!&quot;&gt;
+                &lt;img src=&quot;&quot; alt=&quot;LoveLive!&quot;&gt;
             &lt;/h1&gt;
         &lt;/div&gt;
 
@@ -294,7 +294,7 @@
 <p>著作権表示は <tt>p</tt> 要素を使ってマークアップします。クラス名で著作権表示と分かるようなクラス名を付けておくのが良いでしょう。</p>
 <div class="emlist-code">
 <pre class="emlist">&lt;p class=&quot;nav navbar-text navbar-left  ll-copyright&quot;&gt;
-    © 2014 LoveLife! 運営事務局
+    © 2014 LoveLive! 運営事務局
 &lt;/p&gt;
 </pre>
 </div>
@@ -311,7 +311,7 @@
 <pre class="emlist">&lt;footer class=&quot;navbar navbar-default  ll-navbar&quot; role=&quot;contentinfo&quot;&gt;
     &lt;div class=&quot;container-fluid  ll-container&quot;&gt;
         &lt;p class=&quot;nav navbar-text navbar-left  ll-copyright&quot;&gt;
-            © 2014 LoveLife! 運営事務局
+            © 2014 LoveLive! 運営事務局
         &lt;/p&gt;
 
         &lt;ul class=&quot;nav navbar-nav navbar-right&quot;&gt;
