--- a/ch04.html
+++ b/ch04.html
@@ -79,7 +79,7 @@
 </div>
 
 <h2><a id="h4-4"></a><span class="secno">4.4　</span>セレクタについて</h2>
-<p>セレクタとはHTML内の特定要素に合致するパターンを指します。[セレクタ Level3の2.セレクタ]（http://standards.mitsue.co.jp/resources/w3c/TR/css3-selectors/#selectors）を見ると分かるように多種多様なセレクタがあります。</p>
+<p>セレクタとはHTML内の特定要素に合致するパターンを指します。<a href="http://standards.mitsue.co.jp/resources/w3c/TR/css3-selectors/#selectors" class="link">セレクタ Level3の2.セレクタ</a>を見ると分かるように多種多様なセレクタがあります。</p>
 <p>しかし、よく使うものは限られてます。ここでは、そのよく使う以下のセレクタについて解説していきます。</p>
 <ul>
 <li>要素セレクタ</li>
