change(example): ラブライブ参加者募集サイトの構成を更新

--- a/example/index.html
+++ b/example/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="ラブライブ！の参加者募集サイトです">
     <meta name="keywords" content="特設サイト">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" href="components/Nico/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/main.css">
     <script src="components/lory/dist/lory.js" defer></script>
 </head>
