chore(example): サイトのロゴをテキストに置き換えた

--- a/example/index.html
+++ b/example/index.html
@@ -16,7 +16,7 @@
         <div class="container-fluid  ll-container">
             <div class="navbar-header">
                 <h1 class="navbar-brand  ll-logo">
-                    <img src="" alt="LoveLive!">
+                    LoveLive!
                 </h1>
             </div>
 
