fix(example): サイトの著作権情報を、公式っぽい情報から明確に関係ないという旨の文言にした

--- a/example/livestage.html
+++ b/example/livestage.html
@@ -101,7 +101,7 @@
     <footer class="navbar navbar-default  ll-navbar" role="contentinfo">
         <div class="container-fluid  ll-container">
             <p class="nav navbar-text navbar-left  ll-copyright">
-                © 2014 LoveLive! 運営事務局
+                このサイトは<a href="http://startdash.o2p.jp/">サイト制作のSTART:DASH!!</a>用に作られたものであり、プロジェクトラブライブ！とは関係ありません。
             </p>
 
             <ul class="nav navbar-nav navbar-right">
