--- a/example/index.html
+++ b/example/index.html
@@ -16,7 +16,7 @@
         <div class="container-fluid  ll-container">
             <div class="navbar-header">
                 <h1 class="navbar-brand  ll-logo">
-                    <img src="" alt="LoveLive!">
+                    LoveLive!
                 </h1>
             </div>
 
@@ -67,7 +67,7 @@
     <footer class="navbar navbar-default  ll-navbar" role="contentinfo">
         <div class="container-fluid  ll-container">
             <p class="nav navbar-text navbar-left  ll-copyright">
-                © 2014 LoveLive! 運営事務局
+                このサイトは<a href="http://startdash.o2p.jp/">サイト制作のSTART:DASH!!</a>用に作られたものであり、プロジェクトラブライブ！とは関係ありません。
             </p>
 
             <ul class="nav navbar-nav navbar-right">
