[ci skip] Update with 4bae0bb

--- a/ch01.html
+++ b/ch01.html
@@ -61,7 +61,14 @@
 </ul>
 
 <h3><a id="h1-2-1"></a>今回の要素について整理</h3>
-<p>アニメのキャプチャから、Webサイトを構成する要素について分析してみます。まず、グローバルナビゲーションに表示されている内容は以下のとおりとなります。</p>
+<p>アニメのキャプチャから、Webサイトを構成する要素について分析してみます。</p>
+<div id="lovelive-screenshot-top" class="image">
+<img src="images/ch01/lovelive-screenshot-top.jpg" alt="サイトトップ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！" />
+<p class="caption">
+図1.4: サイトトップ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！
+</p>
+</div>
+<p>まず、グローバルナビゲーションに表示されている内容は以下のとおりとなります。</p>
 <ul>
 <li>TOP</li>
 <li>LIVE STAGE</li>
@@ -106,7 +113,7 @@
 <div id="id_01" class="image">
 <img src="images/ch01/01.jpg" alt="要素整理" />
 <p class="caption">
-図1.1: 要素整理
+図1.2: 要素整理
 </p>
 </div>
 
@@ -119,7 +126,7 @@
 <div id="id_02" class="image">
 <img src="images/ch01/02.jpg" alt="サイトマップ" />
 <p class="caption">
-図1.2: サイトマップ
+図1.3: サイトマップ
 </p>
 </div>
 
@@ -134,7 +141,13 @@
 <p>要件定義の段階で分かりましたが、今回はページ数・要素共に少ないです。そのため、ワイヤーフレームと仕様書をまとめて書きました。1ページずつ見ていきましょう。</p>
 
 <h3><a id="h1-5-1"></a>トップページのワイヤーフレームと仕様</h3>
-<p>共通のヘッダー・グローバルナビゲーション・フッター以外、アニメ内では、画像表示のみに見えます。トップページで訴求したいことは以下の2つになると思います。これは華やかな画像をいっぱい見られる設計だと思われます。</p>
+<div id="lovelive-screenshot-top" class="image">
+<img src="images/ch01/lovelive-screenshot-top.jpg" alt="サイトトップ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！" />
+<p class="caption">
+図1.4: サイトトップ（ラブライブ！第2期 1話より）© プロジェクトラブライブ！
+</p>
+</div>
+<p>画像から推測すると、共通のヘッダー・グローバルナビゲーション・フッター以外、アニメ内では画像表示のみに見えます。トップページで訴求したいことは以下の2つになると思います。これは華やかな画像をいっぱい見られる設計だと思われます。</p>
 <ul>
 <li>コンテストの盛り上がり</li>
 <li>歴代受賞者の宣伝</li>
@@ -143,16 +156,22 @@
 <div id="id_03" class="image">
 <img src="images/ch01/03.jpg" alt="トップページのワイヤーフレーム" />
 <p class="caption">
-図1.3: トップページのワイヤーフレーム
+図1.5: トップページのワイヤーフレーム
 </p>
 </div>
 
 <h3><a id="h1-5-2"></a>ライブステージのワイヤーフレームと仕様</h3>
-<p>共通要素を除くと、「ニコニコ動画」の仕様に似ています。生中継はもちろん映像が中心と思われます。他の機能については映像と関連するものという想定です。さらに、映像エリアの隣に広告スペースが見えます。おそらくここに広告が掲載されているでしょう。また本来は「ニコニコ動画」のようなコメント機能があると思われます。今回は工数が足りないため、少し改造しSNSコメントという似ている機能へ変更しました。「何かをコメントする」体験は変えず、より工数の少ないものに変えられたと思います。</p>
+<div id="lovelive-screenshot-livestage" class="image">
+<img src="images/ch01/lovelive-screenshot-livestage.jpg" alt="ライブステージページ（ラブライブ！第2期 3話より）© プロジェクトラブライブ！" />
+<p class="caption">
+図1.6: ライブステージページ（ラブライブ！第2期 3話より）© プロジェクトラブライブ！
+</p>
+</div>
+<p>画像から推測すると、共通要素を除けば「ニコニコ動画」の仕様に似ています。生中継はもちろん映像が中心と思われます。他の機能については映像と関連するものという想定です。さらに、映像エリアの隣に広告スペースが見えます。おそらくここに広告が掲載されているでしょう。また本来は「ニコニコ動画」のようなコメント機能があると思われます。今回は工数が足りないため、少し改造しSNSコメントという似ている機能へ変更しました。「何かをコメントする」体験は変えず、より工数の少ないものに変えられたと思います。</p>
 <div id="id_04" class="image">
 <img src="images/ch01/04.jpg" alt="ライブステージのワイヤーフレーム" />
 <p class="caption">
-図1.4: ライブステージのワイヤーフレーム
+図1.7: ライブステージのワイヤーフレーム
 </p>
 </div>
 
@@ -161,19 +180,19 @@
 <div id="id_05" class="image">
 <img src="images/ch01/05.jpg" alt="まだ作っていないというポップアップのワイヤーフレーム" />
 <p class="caption">
-図1.5: まだ作っていないというポップアップのワイヤーフレーム
+図1.8: まだ作っていないというポップアップのワイヤーフレーム
 </p>
 </div>
 <div id="id_06" class="image">
 <img src="images/ch01/06.jpg" alt="SNSのコメントポップアップのワイヤーフレーム" />
 <p class="caption">
-図1.6: SNSのコメントポップアップのワイヤーフレーム
+図1.9: SNSのコメントポップアップのワイヤーフレーム
 </p>
 </div>
 <div id="id_07" class="image">
 <img src="images/ch01/07.jpg" alt="投票結果を再現するためのワイヤーフレーム" />
 <p class="caption">
-図1.7: 投票結果を再現するためのワイヤーフレーム
+図1.10: 投票結果を再現するためのワイヤーフレーム
 </p>
 </div>
 
