--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
 <p>第一章ではサイトの企画について@fruitnoodleがどのように必要な情報をまとめていくかを書いていきます。第二章ではサイトの開発について@kuboshoがどのように実装していくのかを書いていきます。</p>
 <p>なお、デザイン段階やテスト段階、またリリース後のマーケティングについては本書で取り扱いません。</p>
 
-<h2><a id="h-2"></a>Special thanks</h2>
+<h2><a id="h-2"></a>アニメからの画像引用について</h2>
+<p>この同人誌では、アニメから画像キャプチャを引用している箇所があります。これに関しては著作権法第32条の1項で規定されている引用の条件に基づき、引用をおこなっています。</p>
+
+<h2><a id="h-3"></a>Special thanks</h2>
 
 
             <ul class="pager">
