--- a/example/livestage.html
+++ b/example/livestage.html
@@ -1,114 +1,60 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>LoveLive! 2nd Tournament</title>
-    <meta name="description" content="ラブライブ！の参加者募集サイトです">
-    <meta name="keywords" content="特設サイト">
-    <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="components/Nico/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/main.css">
+  <meta charset="UTF-8">
+  <title>LoveLive! 2nd トーナメント</title>
+  <meta name="description" content="ラブライブ！の参加者募集サイトです">
+  <meta name="keywords" content="ラブライブ,特設サイト">
+  <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="components/Nico/bootstrap.min.css">
+  <link rel="stylesheet" href="styles/main.css">
+  <script src="components/lory/lory.min.js" defer></script>
 </head>
 
 <body>
-    <header class="navbar navbar-default  ll-navbar" role="banner">
-        <div class="container-fluid  ll-container">
-            <div class="navbar-header">
-                <h1 class="navbar-brand  ll-logo">
-                    LoveLive!
-                </h1>
-            </div>
+<header id="ll-header" class="navbar navbar-default" role="banner">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <h1 class="navbar-brand ll-logo">LoveLive!</h1>
+    </div>
 
-            <ul class="nav navbar-nav navbar-right  ll-nav-links">
-                <li><a href="mail-magazine.html">Mail magazine</a></li>
-                <li><a href="">SNS</a></li>
-                <li><a href="">Share</a></li>
-                <li><a href="help.html">Help</a></li>
-            </ul>
-        </div>
-    </header>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="mail-magazine.html">Mail magazine</a></li>
+      <li><a href="#">SNS</a></li>
+      <li><a href="#">Share</a></li>
+      <li><a href="#">Help</a></li>
+    </ul>
+  </div>
+</header>
 
-    <nav class="navbar navbar-inverse  ll-navbar ll-navbar--bg-inverse" role="navigation">
-        <div class="container-fluid  ll-container">
-            <ul class="nav navbar-nav  ll-nav-links">
-                <li><a href="/">Top</a></li>
-                <li class="active"><a href="livestage.html">Live stage</a></li>
-                <li><a href="outline.html">Outline</a></li>
-                <li><a href="schedule.html">Schedule</a></li>
-                <li><a href="special.html">Special</a></li>
-                <li><a href="link.html">Link</a></li>
-                <li><a href="faq.html">Faq</a></li>
-            </ul>
-        </div>
-    </nav>
+<nav id="ll-nav" class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="/">Top</a></li>
+      <li><a href="livestage.html">Live stage</a></li>
+      <li><a href="#">Outline</a></li>
+      <li><a href="#">Schedule</a></li>
+      <li><a href="#">Special</a></li>
+      <li><a href="#">Link</a></li>
+      <li><a href="#">Faq</a></li>
+    </ul>
+  </div>
+</nav>
 
-    <main role="main">
-        <div class="container-fluid  ll-container">
-            <ol class="breadcrumb  ll-breadcrumb">
-                <li><a href="/">Top</a></li>
-                <li class="active">Live stage</li>
-            </ol>
-        </div>
+<main role="main">
+</main>
 
-        <div class="container-fluid  ll-container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-6">
-                    <div class="ll-live-video-wrapper">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/oWIE7GwJu3c" frameborder="0" allowfullscreen></iframe>
-                    </div>
-                </div>
+<footer id="ll-footer" class="navbar navbar-default" role="contentinfo">
+  <div class="container-fluid">
+    <p class="nav navbar-text navbar-left">
+      このサイトは<a href="http://startdash.o2p.jp/">サイト制作のSTART:DASH!!</a>用に作られたものであり、プロジェクトラブライブ！とは関係ありません。
+    </p>
 
-                <div class="col-xs-3 col-md-3">
-                    <ul class="nav nav-tabs nav-justified  ll-video-tabs">
-                        <li><a href="">Status</a></li>
-                        <li><a href="">Like</a></li>
-                        <li class="active"><a href="">Comment</a></li>
-                        <li><a href="">Settings</a></li>
-                    </ul>
-
-                    <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/hashtag/%E3%83%A9%E3%83%96%E3%83%A9%E3%82%A4%E3%83%96" data-widget-id="620242924207386625">#ラブライブ のツイート</a>
-                </div>
-
-                <div class="col-xs-3 col-md-3">
-                    <h2>Ad</h2>
-
-                    <div class="list-group">
-                        <a href="https://github.com/kubosho/nozomi" class="list-group-item">
-                            <div class="list-group-item-heading">
-                                Nozomi
-                            </div>
-
-                            <p class="list-group-item-text">
-                                "Nozomi" along the gulp workflow helps you to write high-quality CSS.
-                            </p>
-                        </a>
-
-                        <a href="https://github.com/kubosho/Nico" class="list-group-item">
-                            <div class="list-group-item-heading">
-                                Nico
-                            </div>
-
-                            <p class="list-group-item-text">
-                                "Nico" a fork of "Honoka" which is a Bootstrap theme.
-                            </p>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
-
-    <footer class="navbar navbar-default  ll-navbar" role="contentinfo">
-        <div class="container-fluid  ll-container">
-            <p class="nav navbar-text navbar-left  ll-copyright">
-                このサイトは<a href="http://startdash.o2p.jp/">サイト制作のSTART:DASH!!</a>用に作られたものであり、プロジェクトラブライブ！とは関係ありません。
-            </p>
-
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="privacy-policy.html">Privacy policy</a></li>
-                <li><a href="sitemap.html">Sitemap</a></li>
-            </ul>
-        </div>
-    </footer>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#">Privacy policy</a></li>
+      <li><a href="#">Sitemap</a></li>
+    </ul>
+  </div>
+</footer>
 </body>
 </html>
