fix(example): main要素にmainロールが付いたままだったので削除した

--- a/example/index.html
+++ b/example/index.html
@@ -41,7 +41,7 @@
   </div>
 </nav>
 
-<main role="main">
+<main>
 </main>
 
 <footer id="ll-footer" class="navbar navbar-default" role="contentinfo">
