--- a/example/index.html
+++ b/example/index.html
@@ -42,6 +42,17 @@
 </nav>
 
 <main>
+  <div class="js_frame">
+    <ul class="js_slides">
+      <li><img src="images/image_01.jpg" alt=""></li>
+      <li><img src="images/image_02.jpg" alt=""></li>
+    </ul>
+  </div>
+
+  <ol class="js_carousel-pagination ll-carousel-pagination">
+    <li class="js_carousel-pagination-item ll-carousel-pagination-item">●</li>
+    <li class="js_carousel-pagination-item ll-carousel-pagination-item">●</li>
+  </ol>
 </main>
 
 <footer id="ll-footer" class="navbar navbar-default" role="contentinfo">
