--- a/book/ch03.html
+++ b/book/ch03.html
@@ -312,6 +312,7 @@
 /* 横幅が768px以上のときの設定 */
 @media (min-width: 768px) {
   #ll-nav li &gt; a {
+    padding: 0.75em 5em;
     border-right: 1px solid #fff;
   }
 
@@ -388,6 +389,7 @@
 /* 横幅が768px以上のときの設定 */
 @media (min-width: 768px) {
   #ll-nav li &gt; a {
+    padding: 0.75em 5em;
     border-right: 1px solid #fff;
   }
 
