write(ch05): 第5章初校

--- a/example/index.html
+++ b/example/index.html
@@ -14,7 +14,7 @@
   <script src="scripts/main.js" defer></script>
 </head>
 
-<body>
+<body id="ll-top-page">
 <header id="ll-header" class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -22,7 +22,7 @@
     </div>
 
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="mail-magazine.html">Mail magazine</a></li>
+      <li><a href="#">Mail magazine</a></li>
       <li><a href="#">SNS</a></li>
       <li><a href="#">Share</a></li>
       <li><a href="#">Help</a></li>
@@ -32,7 +32,7 @@
   <nav id="ll-nav" class="navbar navbar-inverse">
     <div class="container-fluid">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Top</a></li>
+        <li class="active"><a href="index.html">Top</a></li>
         <li><a href="livestage.html">Live stage</a></li>
         <li><a href="#">Outline</a></li>
         <li><a href="#">Schedule</a></li>
