--- a/example/livestage.html
+++ b/example/livestage.html
@@ -6,45 +6,96 @@
   <meta name="description" content="ラブライブ！の参加者募集サイトです">
   <meta name="keywords" content="ラブライブ,特設サイト">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="components/Nico/bootstrap.min.css">
+  <link rel="stylesheet" href="external/Nico/bootstrap.min.css">
   <link rel="stylesheet" href="styles/main.css">
-  <script src="components/lory/lory.min.js" defer></script>
+  <script id="twitter-wjs" src="https://platform.twitter.com/widgets.js" async></script>
 </head>
 
-<body>
-<header id="ll-header" class="navbar navbar-default" role="banner">
+<body id="ll-livestage-page">
+<header id="ll-header" class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
       <h1 class="navbar-brand ll-logo">LoveLive!</h1>
     </div>
 
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="mail-magazine.html">Mail magazine</a></li>
+      <li><a href="#">Mail magazine</a></li>
       <li><a href="#">SNS</a></li>
       <li><a href="#">Share</a></li>
       <li><a href="#">Help</a></li>
     </ul>
   </div>
+
+  <nav id="ll-nav" class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <ul class="nav navbar-nav">
+        <li><a href="index.html">Top</a></li>
+        <li class="active"><a href="livestage.html">Live stage</a></li>
+        <li><a href="#">Outline</a></li>
+        <li><a href="#">Schedule</a></li>
+        <li><a href="#">Special</a></li>
+        <li><a href="#">Link</a></li>
+        <li><a href="#">Faq</a></li>
+      </ul>
+    </div>
+  </nav>
 </header>
 
-<nav id="ll-nav" class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="/">Top</a></li>
-      <li><a href="livestage.html">Live stage</a></li>
-      <li><a href="#">Outline</a></li>
-      <li><a href="#">Schedule</a></li>
-      <li><a href="#">Special</a></li>
-      <li><a href="#">Link</a></li>
-      <li><a href="#">Faq</a></li>
-    </ul>
-  </div>
-</nav>
-
 <main>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-6">
+        <h2 class="ll-video-title-and-artist">
+          <span class="ll-video-artist">μ's</span><span class="ll-video-title">Angelic Angel</span>
+        </h2>
+        <div class="ll-live-video-wrapper">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/oWIE7GwJu3c" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm-6 ll-video-detail">
+        <ul class="nav nav-tabs nav-justified ll-video-tabs">
+          <li><a href="">Status</a></li>
+          <li><a href="">Like</a></li>
+          <li class="active"><a href="">Comment</a></li>
+          <li><a href="">Settings</a></li>
+        </ul>
+
+        <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/hashtag/%E3%83%A9%E3%83%96%E3%83%A9%E3%82%A4%E3%83%96" data-widget-id="620242924207386625">#ラブライブ のツイート</a>
+      </div>
+
+      <div class="col-md-3 col-sm-6 ll-livestage-ad">
+        <h2 class="ll-ad-title">
+          Ad
+        </h2>
+
+        <div class="list-group">
+          <a href="https://github.com/kubosho/Nico" class="list-group-item">
+            <div class="list-group-item-heading">
+              Nico
+            </div>
+
+            <p class="list-group-item-text">
+              "Nico" a fork of "Honoka" which is a Bootstrap theme.
+            </p>
+          </a>
+
+          <a href="https://github.com/kubosho/kotori" class="list-group-item">
+            <div class="list-group-item-heading">
+              Kotori
+            </div>
+
+            <p class="list-group-item-text">
+              A tool that automatically format and evaluate for CSS.
+            </p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
 </main>
 
-<footer id="ll-footer" class="navbar navbar-default" role="contentinfo">
+<footer id="ll-footer" class="navbar navbar-default">
   <div class="container-fluid">
     <p class="nav navbar-text navbar-left">
       このサイトは<a href="http://startdash.o2p.jp/">サイト制作のSTART:DASH!!</a>用に作られたものであり、プロジェクトラブライブ！とは関係ありません。
